--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "a03",
   "version": "2.1.0",
-  "type": module,
+  "type": "module",
   "description": "",
   "main": " test.js",
   "scripts": {
